--- a/Multy/Info.plist
+++ b/Multy/Info.plist
@@ -34,9 +34,9 @@
 	<key>CFBundleVersion</key>
 	<string>49</string>
 	<key>GIT_BRANCH_NAME</key>
-	<string>CreatingMultiSigWallet</string>
+	<string>addPromises_TEST</string>
 	<key>GIT_COMMIT_HASH</key>
-	<string>ab3cdfd7</string>
+	<string>1856ddd7</string>
 	<key>GIT_TAG_NAME</key>
 	<string>RELEASE_BUILD_1.0.5_53-dirty</string>
 	<key>LSRequiresIPhoneOS</key>
