--- a/Multy/Info.plist
+++ b/Multy/Info.plist
@@ -34,11 +34,11 @@
 	<key>CFBundleVersion</key>
 	<string>92</string>
 	<key>GIT_BRANCH_NAME</key>
-	<string>RELEASE_1.5</string>
+	<string>heads/RELEASE_1.5</string>
 	<key>GIT_COMMIT_HASH</key>
-	<string>50ce4ce1</string>
+	<string>46ffa08b</string>
 	<key>GIT_TAG_NAME</key>
-	<string>RELEASE_1.5.2</string>
+	<string>RELEASE_1.5.2-dirty</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
